--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "less-loader": "^11.1.0",
     "mini-css-extract-plugin": "^2.7.4",
     "style-loader": "^3.3.2",
+    "typescript": "^5.0.2",
     "ts-loader": "^9.4.2",
     "web-vitals": "^3.3.0",
     "webpack": "^5.76.2",
