Bag fix with docker and client

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,11 +1,11 @@
 FROM node:14.17.6
 
 
-WORKDIR /usr/app/app
+WORKDIR /usr/app
 
 COPY ["package.json", "package-lock.json", "tsconfig.json", ".env", "./"]
 
-COPY ./app ./app
+COPY ./ ./
 
 RUN npm install
 
