--- a/app/package.json
+++ b/app/package.json
@@ -2,7 +2,7 @@
   "name": "comments_app_node",
   "version": "1.0.0",
   "description": "",
-  "main": "app/app.ts",
+  "main": "app.ts",
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/js/app.js",
