--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -3,11 +3,11 @@
     "target": "es6",
     "module": "commonjs",
     "outDir": "dist/js",
-    "rootDir": "app",
+    "rootDir": "",
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["app/**/*"],
+  "include": ["**/*"],
   "exclude": ["src/types/*.ts", "node_modules", ".vscode"]
 }
