--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,16 +9,16 @@ services:
     depends_on:
       - db
     volumes:
-    - .:/usr/app/app
+    - .:/usr/app
 
   client:
     build: ./client
     container_name: client_frontend
     ports:
-      - '9000:9000'
+      - '8000:8000'
     volumes:
       - ./client:/src
-      - ./app/node_modules
+      - ./client/node_modules
     stdin_open: true
     tty: true
 
