--- a/app/package.json
+++ b/app/package.json
@@ -32,6 +32,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.3",
     "concurrently": "^7.6.0",
-    "nodemon": "^2.0.21"
+    "nodemon": "^2.0.21",
+    "sequelize-cli": "^6.6.0"
   }
 }
