--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.0",
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "babel-loader": "^9.1.2",
@@ -26,17 +27,20 @@
     "less-loader": "^11.1.0",
     "mini-css-extract-plugin": "^2.7.4",
     "style-loader": "^3.3.2",
-    "typescript": "^5.0.2",
     "ts-loader": "^9.4.2",
+    "typescript": "^5.0.2",
     "web-vitals": "^3.3.0",
     "webpack": "^5.76.2",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.12.0"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.9.0"
+    "react-router-dom": "^6.9.0",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   }
 }
