--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -79,7 +79,7 @@
     "moduleResolution": "node",
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "strictNullChecks": true
   },
   "include": [
