--- a/app/.env
+++ b/app/.env
@@ -3,5 +3,5 @@ DB_USER='dzenintern'
 DB_HOST='127.0.0.1'
 DB_NAME='comments_app'
 DB_DRIVER='postgres'
-DB_PASSWORD='dzencode123'
+DB_PASSWORD='dzenintern123'
 DB_PORT=5432
