--- a/app/package.json
+++ b/app/package.json
@@ -5,8 +5,8 @@
   "main": "app.ts",
   "scripts": {
     "build": "npx tsc",
-    "start": "node dist/js/app.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/js/app.js\""
+    "start": "node build/app.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q build/app.js\""
   },
   "repository": {
     "type": "git",
@@ -24,14 +24,16 @@
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.29.3",
+    "sequelize-typescript": "^2.1.5",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/node": "^18.15.3",
+    "@types/node": "^18.15.5",
     "concurrently": "^7.6.0",
+    "dotenv": "^16.0.3",
     "nodemon": "^2.0.21",
     "sequelize-cli": "^6.6.0"
   }
