--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -2,12 +2,14 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
-    "outDir": "dist/js",
-    "rootDir": "",
-    "strict": true,
+    "outDir": "./build",
+    "noImplicitAny": false,
     "esModuleInterop": true,
+    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["**/*"],
+  "include": [
+    "**/*"
+],
   "exclude": ["src/types/*.ts", "node_modules", ".vscode"]
 }
