--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
